--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -26,7 +26,7 @@
                     <td>{{ receipt.vendor }}</td>
                     <td>{{ receipt.total }}</td>
                     <td>{{ receipt.tax }}</td>
-                    <td>{{ receipt.date|date:"n/j/y" }}</td>
+                    <td>{{ receipt.date|date:"m/d/y" }}</td>
                     <td>{{ receipt.category_name }}</td>
                     <td>{{ receipt.account_name }}</td>
                 </tr>
