--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Login
+Signup
 {% endblock title %}
 
 {% block content %}
 <main>
     <div>
-        <h1>Login</h1>
+        <h1>Signup</h1>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="button">Login</button>
+            <button class="button">Signup</button>
         </form>
     </div>
 </main>
