--- a/receipts/templates/base.html
+++ b/receipts/templates/base.html
@@ -13,6 +13,12 @@
         <nav>
             <ul>
                 {% if user.is_authenticated %}
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'category_list' %}">Categories</a></li>
+                    <li><a href="{% url 'account_list' %}">Accounts</a></li>
+                    <li><a href="{% url 'create_receipt' %}">Create Receipt</a></li>
+                    <li><a href="{% url 'create_category' %}">Create Category</a></li>
+                    <li><a href="{% url 'create_account' %}">Create Account</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
@@ -24,6 +30,3 @@
     {% block content %}{% endblock content %}
 </body>
 </html>
-
-
-
